Turn library into INTERFACE
Only necessary for now since we have no sources right now, this will
change.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ project(
     DESCRIPTION "A library to read .mid and .chart files for GH/RB-style games"
     LANGUAGES CXX)
 
-add_library(sightread)
+add_library(sightread INTERFACE)
 
 target_include_directories(sightread PUBLIC include)
 
