--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -25,6 +25,8 @@ jobs:
           export CXX=g++-10
           ./bootstrap.sh --with-libraries=json,nowide,program_options,test --prefix=.
           ./b2 install > /dev/null
+      - name: Application files
+        run: clang-tidy-16 src/sightread/*.cpp -- -Iinclude -I$HOME/boost_1_81_0 -std=c++20
       - name: Test files
         run: clang-tidy-16 tests/sightread/*_unittest.cpp -checks=-cppcoreguidelines-avoid-do-while,-cppcoreguidelines-avoid-magic-numbers,-cppcoreguidelines-avoid-non-const-global-variables,-cppcoreguidelines-macro-usage,-clang-analyzer-*,-readability-function-cognitive-complexity,-readability-magic-numbers -- -Iinclude -I$HOME/boost_1_81_0 -std=c++20
 
@@ -41,5 +43,5 @@ jobs:
           sudo apt-get install -y clang-format-16
       - name: Format
         run: |
-          clang-format-16 -i include/sightread/*.hpp tests/sightread/*.cpp
+          clang-format-16 -i include/sightread/*.hpp src/sightread/*.cpp tests/sightread/*.cpp
           git diff --color --exit-code
