--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,9 +17,9 @@ function(set_cpp_standard target)
         CXX_EXTENSIONS OFF)
 endfunction()
 
-add_library(sightread INTERFACE)
+add_library(sightread src/sightread/tempomap.cpp)
 
-target_include_directories(sightread INTERFACE include)
+target_include_directories(sightread PUBLIC include)
 set_cpp_standard(sightread)
 
 option(SIGHTREAD_BUILD_TESTS "Build SightRead tests" OFF)
@@ -31,7 +31,8 @@ if(SIGHTREAD_BUILD_TESTS)
     add_executable(
         sightread_tests
         tests/sightread/test_main.cpp
-        tests/sightread/time_unittest.cpp)
+        tests/sightread/time_unittest.cpp
+        src/sightread/tempomap.cpp)
 
     target_include_directories(sightread_tests PRIVATE "${PROJECT_SOURCE_DIR}/include")
     target_link_directories(sightread_tests PRIVATE ${Boost_LIBRARY_DIRS})
