Simplify Boost install for GitHub Actions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
           cd "$HOME/boost_1_81_0"
           export CC=gcc-10
           export CXX=g++-10
-          ./bootstrap.sh --with-libraries=json,nowide,program_options,test --prefix=.
+          ./bootstrap.sh --with-libraries=test --prefix=.
           ./b2 install > /dev/null
       - name: Build
         run: |
