--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -23,10 +23,10 @@ jobs:
           cd "$HOME/boost_1_81_0"
           export CC=gcc-10
           export CXX=g++-10
-          ./bootstrap.sh --with-libraries=json,nowide,program_options,test --prefix=.
+          ./bootstrap.sh --with-libraries=test --prefix=.
           ./b2 install > /dev/null
       - name: Application files
-        run: clang-tidy-16 src/sightread/*.cpp -- -Iinclude -I$HOME/boost_1_81_0 -std=c++20
+        run: clang-tidy-16 src/sightread/*.cpp -- -Iinclude -std=c++20
       - name: Test files
         run: clang-tidy-16 tests/sightread/*_unittest.cpp -checks=-cppcoreguidelines-avoid-do-while,-cppcoreguidelines-avoid-magic-numbers,-cppcoreguidelines-avoid-non-const-global-variables,-cppcoreguidelines-macro-usage,-clang-analyzer-*,-readability-function-cognitive-complexity,-readability-magic-numbers -- -Iinclude -I$HOME/boost_1_81_0 -std=c++20
 
