--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -26,7 +26,7 @@ jobs:
           ./bootstrap.sh --with-libraries=test --prefix=.
           ./b2 install > /dev/null
       - name: Application files
-        run: clang-tidy-16 src/sightread/*.cpp -- -Iinclude -std=c++20
+        run: clang-tidy-16 src/sightread/*.cpp src/sightread/detail/*.cpp -- -Iinclude -std=c++20
       - name: Test files
         run: clang-tidy-16 tests/sightread/*_unittest.cpp -checks=-cppcoreguidelines-avoid-do-while,-cppcoreguidelines-avoid-magic-numbers,-cppcoreguidelines-avoid-non-const-global-variables,-cppcoreguidelines-macro-usage,-clang-analyzer-*,-readability-function-cognitive-complexity,-readability-magic-numbers -- -Iinclude -I$HOME/boost_1_81_0 -std=c++20
 
@@ -43,5 +43,5 @@ jobs:
           sudo apt-get install -y clang-format-16
       - name: Format
         run: |
-          clang-format-16 -i include/sightread/*.hpp src/sightread/*.cpp tests/sightread/*.cpp
+          clang-format-16 -i include/sightread/*.hpp src/sightread/*.cpp src/sightread/detail/*.cpp src/sightread/detail/*.hpp tests/sightread/*.cpp
           git diff --color --exit-code
