--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,11 +4,10 @@ on: push
 
 jobs:
   tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: true
+      - uses: actions/checkout@v4
+
       - name: Install Boost 1.81.0
         run: |
           wget -O "$HOME/boost_1_81_0.tar.bz2" https://boostorg.jfrog.io/artifactory/main/release/1.81.0/source/boost_1_81_0.tar.bz2
@@ -18,12 +17,14 @@ jobs:
           export CXX=g++-10
           ./bootstrap.sh --with-libraries=test --prefix=.
           ./b2 install > /dev/null
+
       - name: Build
         run: |
           mkdir build
           cd build
           cmake -DSIGHTREAD_BUILD_TESTS=ON -DCMAKE_CXX_COMPILER=g++-10 -DBOOST_ROOT=$HOME/boost_1_81_0 ..
           cmake --build . --verbose --config Debug
+
       - name: Unit tests
         run: |
           cd build
