Add MinGW compiler warnings

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,12 +1,13 @@
-name: static-analysis
+name: Static Analysis
 
 on: push
 
 jobs:
-  clang-tidy-ubuntu:
+  clang-tidy:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Install clang-tidy-16
         run: |
@@ -32,10 +33,11 @@ jobs:
       - name: Test files
         run: clang-tidy-16 tests/sightread/*_unittest.cpp tests/sightread/detail/*_unittest.cpp -checks=-cppcoreguidelines-avoid-do-while,-cppcoreguidelines-avoid-magic-numbers,-cppcoreguidelines-avoid-non-const-global-variables,-cppcoreguidelines-macro-usage,-clang-analyzer-*,-readability-function-cognitive-complexity,-readability-magic-numbers -- -Iinclude -Isrc -Itests/sightread -I$HOME/boost_1_81_0 -std=c++20
 
-  clang-format-ubuntu:
-    runs-on: ubuntu-latest
+  clang-format:
+    runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Install clang-format-16
         run: |
@@ -49,77 +51,3 @@ jobs:
         run: |
           clang-format-16 -i include/sightread/*.hpp src/sightread/*.cpp src/sightread/detail/*.cpp src/sightread/detail/*.hpp tests/sightread/*.cpp tests/sightread/*.hpp tests/sightread/detail/*.cpp
           git diff --color --exit-code
-
-  msvc-compiler-warnings:
-    runs-on: windows-2022
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Boost Test
-        run: vcpkg --triplet x64-windows install boost-test
-
-      - name: Build
-        run: |
-          mkdir build
-          cd build
-          cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_INSTALLATION_ROOT\scripts\buildsystems\vcpkg.cmake" -G "Visual Studio 17 2022" ..
-          cmake --build . --verbose --config Debug
-
-  apple-clang-compiler-warnings:
-    runs-on: macos-12
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Boost
-        run: brew install boost
-
-      - name: Build
-        run: |
-          mkdir build
-          cd build
-          cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON ..
-          cmake --build . --verbose --config Debug
-
-  linux-gcc-compiler-warnings:
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Boost 1.81.0
-        run: |
-          wget -O "$HOME/boost_1_81_0.tar.bz2" https://boostorg.jfrog.io/artifactory/main/release/1.81.0/source/boost_1_81_0.tar.bz2
-          tar --bzip2 -xf "$HOME/boost_1_81_0.tar.bz2" -C "$HOME"
-          cd "$HOME/boost_1_81_0"
-          export CC=gcc-10
-          export CXX=g++-10
-          ./bootstrap.sh --with-libraries=test --prefix=.
-          ./b2 install > /dev/null
-
-      - name: Build
-        run: |
-          mkdir build
-          cd build
-          cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON -DCMAKE_CXX_COMPILER=g++-10 -DBOOST_ROOT=$HOME/boost_1_81_0 ..
-          cmake --build . --verbose --config Debug
-
-  linux-clang-compiler-warnings:
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Boost 1.81.0
-        run: |
-          wget -O "$HOME/boost_1_81_0.tar.bz2" https://boostorg.jfrog.io/artifactory/main/release/1.81.0/source/boost_1_81_0.tar.bz2
-          tar --bzip2 -xf "$HOME/boost_1_81_0.tar.bz2" -C "$HOME"
-          cd "$HOME/boost_1_81_0"
-          export CC=clang-15
-          export CXX=clang++-15
-          ./bootstrap.sh --with-libraries=test --prefix=.
-          ./b2 install > /dev/null
-
-      - name: Build
-        run: |
-          mkdir build
-          cd build
-          cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON -DCMAKE_CXX_COMPILER=clang++-15 -DBOOST_ROOT=$HOME/boost_1_81_0 ..
-          cmake --build . --verbose --config Debug
