--- a/.github/workflows/compiler-warnings.yml
+++ b/.github/workflows/compiler-warnings.yml
@@ -70,6 +70,34 @@ jobs:
           cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON ..
           cmake --build . --verbose --config Debug
 
+  mac-gcc:
+    runs-on: macos-12
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Boost 1.84.0
+        run: |
+          wget -O "$HOME/boost_1_84_0.tar.bz2" https://boostorg.jfrog.io/artifactory/main/release/1.84.0/source/boost_1_84_0.tar.bz2
+          tar --bzip2 -xf "$HOME/boost_1_84_0.tar.bz2" -C "$HOME"
+          cd "$HOME/boost_1_84_0"
+          export CC=gcc-13
+          export CXX=g++-13
+          ./bootstrap.sh --with-libraries=test --prefix=.
+          ./b2 toolset=gcc-13 install > /dev/null
+
+      - name: Make build directory
+        run: mkdir build
+
+      - name: Build
+        working-directory: build
+        env:
+          BOOST_ROOT: ~/boost_1_84_0
+          CXX: g++-13
+        run: |
+          cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON ..
+          cmake --build . --verbose --config Debug
+
   apple-clang:
     runs-on: macos-12
     steps:
