--- a/.github/workflows/compiler-warnings.yml
+++ b/.github/workflows/compiler-warnings.yml
@@ -15,14 +15,16 @@ jobs:
       - name: Make build directory
         run: mkdir build
 
-      - name: Build
+      - name: Generate build files
         working-directory: build
         env:
           CMAKE_GENERATOR: "Visual Studio 17 2022"
           CMAKE_TOOLCHAIN_FILE: C:/vcpkg/scripts/buildsystems/vcpkg.cmake
-        run: |
-          cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON ..
-          cmake --build . --verbose --config Debug
+        run: cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON ..
+
+      - name: Build
+        working-directory: build
+        run: cmake --build . --verbose
 
   windows-gcc:
     runs-on: windows-2022
@@ -38,7 +40,7 @@ jobs:
       - name: Make build directory
         run: mkdir build
 
-      - name: Build
+      - name: Generate build files
         working-directory: build
         env:
           CMAKE_GENERATOR: "MinGW Makefiles"
@@ -46,7 +48,10 @@ jobs:
         run: |
           $env:PATH = "C:\msys64\usr\bin;$env:PATH"
           cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON -DVCPKG_TARGET_TRIPLET=x64-mingw-static ..
-          cmake --build . --verbose --config Debug
+
+      - name: Build
+        working-directory: build
+        run: cmake --build . --verbose
 
   windows-clang:
     runs-on: windows-2022
@@ -60,15 +65,17 @@ jobs:
       - name: Make build directory
         run: mkdir build
 
-      - name: Build
+      - name: Generate build files
         working-directory: build
         env:
           CMAKE_GENERATOR: "Visual Studio 17 2022"
           CMAKE_GENERATOR_TOOLSET: ClangCL
           CMAKE_TOOLCHAIN_FILE: C:/vcpkg/scripts/buildsystems/vcpkg.cmake
-        run: |
-          cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON ..
-          cmake --build . --verbose --config Debug
+        run: cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON ..
+
+      - name: Build
+        working-directory: build
+        run: cmake --build . --verbose
 
   mac-gcc:
     runs-on: macos-12
@@ -81,22 +88,22 @@ jobs:
           wget -O "$HOME/boost_1_84_0.tar.bz2" https://boostorg.jfrog.io/artifactory/main/release/1.84.0/source/boost_1_84_0.tar.bz2
           tar --bzip2 -xf "$HOME/boost_1_84_0.tar.bz2" -C "$HOME"
           cd "$HOME/boost_1_84_0"
-          export CC=gcc-13
-          export CXX=g++-13
           ./bootstrap.sh --with-libraries=test --prefix=.
           ./b2 toolset=gcc-13 install > /dev/null
 
       - name: Make build directory
         run: mkdir build
 
-      - name: Build
+      - name: Generate build files
         working-directory: build
         env:
           BOOST_ROOT: ~/boost_1_84_0
           CXX: g++-13
-        run: |
-          cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON ..
-          cmake --build . --verbose --config Debug
+        run: cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON ..
+
+      - name: Build
+        working-directory: build
+        run: cmake --build . --verbose
 
   apple-clang:
     runs-on: macos-12
@@ -110,11 +117,13 @@ jobs:
       - name: Make build directory
         run: mkdir build
 
+      - name: Generate build files
+        working-directory: build
+        run: cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON ..
+
       - name: Build
         working-directory: build
-        run: |
-          cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON ..
-          cmake --build . --verbose --config Debug
+        run: cmake --build . --verbose
 
   linux-gcc:
     runs-on: ubuntu-22.04
@@ -122,27 +131,27 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Boost 1.81.0
+      - name: Install Boost 1.84.0
         run: |
-          wget -O "$HOME/boost_1_81_0.tar.bz2" https://boostorg.jfrog.io/artifactory/main/release/1.81.0/source/boost_1_81_0.tar.bz2
-          tar --bzip2 -xf "$HOME/boost_1_81_0.tar.bz2" -C "$HOME"
-          cd "$HOME/boost_1_81_0"
-          export CC=gcc-10
-          export CXX=g++-10
+          wget -O "$HOME/boost_1_84_0.tar.bz2" https://boostorg.jfrog.io/artifactory/main/release/1.84.0/source/boost_1_84_0.tar.bz2
+          tar --bzip2 -xf "$HOME/boost_1_84_0.tar.bz2" -C "$HOME"
+          cd "$HOME/boost_1_84_0"
           ./bootstrap.sh --with-libraries=test --prefix=.
-          ./b2 install > /dev/null
+          ./b2 toolset=gcc-13 install > /dev/null
 
       - name: Make build directory
         run: mkdir build
 
-      - name: Build
+      - name: Generate build files
         working-directory: build
         env:
-          BOOST_ROOT: ~/boost_1_81_0
-          CXX: g++-10
-        run: |
-          cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON ..
-          cmake --build . --verbose --config Debug
+          BOOST_ROOT: ~/boost_1_84_0
+          CXX: g++-13
+        run: cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON ..
+
+      - name: Build
+        working-directory: build
+        run: cmake --build . --verbose
 
   linux-clang:
     runs-on: ubuntu-22.04
@@ -150,24 +159,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Boost 1.81.0
+      - name: Install Boost 1.84.0
         run: |
-          wget -O "$HOME/boost_1_81_0.tar.bz2" https://boostorg.jfrog.io/artifactory/main/release/1.81.0/source/boost_1_81_0.tar.bz2
-          tar --bzip2 -xf "$HOME/boost_1_81_0.tar.bz2" -C "$HOME"
-          cd "$HOME/boost_1_81_0"
-          export CC=clang-15
-          export CXX=clang++-15
+          wget -O "$HOME/boost_1_84_0.tar.bz2" https://boostorg.jfrog.io/artifactory/main/release/1.84.0/source/boost_1_84_0.tar.bz2
+          tar --bzip2 -xf "$HOME/boost_1_84_0.tar.bz2" -C "$HOME"
+          cd "$HOME/boost_1_84_0"
           ./bootstrap.sh --with-libraries=test --prefix=.
-          ./b2 install > /dev/null
+          ./b2 toolset=clang-15 install > /dev/null
 
       - name: Make build directory
         run: mkdir build
 
-      - name: Build
+      - name: Generate build files
         working-directory: build
         env:
-          BOOST_ROOT: ~/boost_1_81_0
+          BOOST_ROOT: ~/boost_1_84_0
           CXX: clang++-15
-        run: |
-          cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON ..
-          cmake --build . --verbose --config Debug
+        run: cmake -DSIGHTREAD_BUILD_TESTS=ON -DSIGHTREAD_ENABLE_WARNINGS=ON ..
+
+      - name: Build
+        working-directory: build
+        run: cmake --build . --verbose
