--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,11 +9,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Boost 1.84.0
+      - name: Install Boost 1.86.0
         run: |
-          wget -O "$HOME/boost_1_84_0.tar.bz2" https://boostorg.jfrog.io/artifactory/main/release/1.84.0/source/boost_1_84_0.tar.bz2
-          tar --bzip2 -xf "$HOME/boost_1_84_0.tar.bz2" -C "$HOME"
-          cd "$HOME/boost_1_84_0"
+          wget -O "$HOME/boost_1_86_0.tar.bz2" https://archives.boost.io/release/1.86.0/source/boost_1_86_0.tar.bz2
+          tar --bzip2 -xf "$HOME/boost_1_86_0.tar.bz2" -C "$HOME"
+          cd "$HOME/boost_1_86_0"
           ./bootstrap.sh --with-libraries=test --prefix=.
           ./b2 toolset=gcc-14 install > /dev/null
 
@@ -23,7 +23,7 @@ jobs:
       - name: Generate build files
         working-directory: build
         env:
-          BOOST_ROOT: ~/boost_1_84_0
+          BOOST_ROOT: ~/boost_1_86_0
           CXX: g++-14
         run: cmake -DSIGHTREAD_BUILD_TESTS=ON ..
 
