Add basic QbMidi parser

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,8 @@ add_library(sightread
     src/sightread/detail/chartconverter.cpp
     src/sightread/detail/midi.cpp
     src/sightread/detail/midiconverter.cpp
-    src/sightread/detail/parserutil.cpp)
+    src/sightread/detail/parserutil.cpp
+    src/sightread/detail/qbmidi.cpp)
 
 target_include_directories(sightread PUBLIC include PRIVATE src)
 set_cpp_standard(sightread)
@@ -92,7 +93,8 @@ if(SIGHTREAD_BUILD_TESTS)
         src/sightread/detail/chartconverter.cpp
         src/sightread/detail/midi.cpp
         src/sightread/detail/midiconverter.cpp
-        src/sightread/detail/parserutil.cpp)
+        src/sightread/detail/parserutil.cpp
+        src/sightread/detail/qbmidi.cpp)
 
     target_include_directories(sightread_tests PRIVATE include src tests/sightread)
     target_link_directories(sightread_tests PRIVATE ${Boost_LIBRARY_DIRS})
