--- a/.github/workflows/compiler-warnings.yml
+++ b/.github/workflows/compiler-warnings.yml
@@ -9,8 +9,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Boost Test
-        run: vcpkg --triplet x64-windows install boost-test
+      - name: Install Boost dependencies
+        run: vcpkg --triplet x64-windows install boost-locale boost-test
 
       - name: Make build directory
         run: mkdir build
@@ -32,10 +32,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Boost Test
+      - name: Install Boost dependencies
         run: |
           $env:PATH = "C:\msys64\usr\bin;$env:PATH"
-          vcpkg --triplet x64-mingw-static install boost-test
+          vcpkg --triplet x64-mingw-static install boost-locale boost-test
 
       - name: Make build directory
         run: mkdir build
@@ -59,8 +59,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Boost Test
-        run: vcpkg --triplet x64-windows install boost-test
+      - name: Install Boost dependencies
+        run: vcpkg --triplet x64-windows install boost-locale boost-test
 
       - name: Make build directory
         run: mkdir build
@@ -88,7 +88,7 @@ jobs:
           wget -O "$HOME/boost_1_86_0.tar.bz2" https://archives.boost.io/release/1.86.0/source/boost_1_86_0.tar.bz2
           tar --bzip2 -xf "$HOME/boost_1_86_0.tar.bz2" -C "$HOME"
           cd "$HOME/boost_1_86_0"
-          ./bootstrap.sh --with-libraries=test --prefix=.
+          ./bootstrap.sh --with-libraries=locale,test --prefix=.
           ./b2 toolset=gcc-14 install > /dev/null
 
       - name: Make build directory
@@ -136,7 +136,7 @@ jobs:
           wget -O "$HOME/boost_1_86_0.tar.bz2" https://archives.boost.io/release/1.86.0/source/boost_1_86_0.tar.bz2
           tar --bzip2 -xf "$HOME/boost_1_86_0.tar.bz2" -C "$HOME"
           cd "$HOME/boost_1_86_0"
-          ./bootstrap.sh --with-libraries=test --prefix=.
+          ./bootstrap.sh --with-libraries=locale,test --prefix=.
           ./b2 toolset=gcc-14 install > /dev/null
 
       - name: Make build directory
@@ -164,7 +164,7 @@ jobs:
           wget -O "$HOME/boost_1_86_0.tar.bz2" https://archives.boost.io/release/1.86.0/source/boost_1_86_0.tar.bz2
           tar --bzip2 -xf "$HOME/boost_1_86_0.tar.bz2" -C "$HOME"
           cd "$HOME/boost_1_86_0"
-          ./bootstrap.sh --with-libraries=test --prefix=.
+          ./bootstrap.sh --with-libraries=locale,test --prefix=.
           ./b2 toolset=clang-18 install > /dev/null
 
       - name: Make build directory
