--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -18,7 +18,7 @@ jobs:
           ./b2 toolset=gcc-14 install > /dev/null
 
       - name: Application files
-        run: clang-tidy-18 src/sightread/*.cpp src/sightread/detail/*.cpp -- -Iinclude -Isrc -std=c++20
+        run: clang-tidy-18 src/sightread/*.cpp src/sightread/detail/*.cpp -- -Iinclude -Isrc -I$HOME/boost_1_86_0 -std=c++20
 
       - name: Test files
         run: clang-tidy-18 tests/sightread/*_unittest.cpp tests/sightread/detail/*_unittest.cpp -checks=-cppcoreguidelines-avoid-do-while,-cppcoreguidelines-avoid-magic-numbers,-cppcoreguidelines-avoid-non-const-global-variables,-cppcoreguidelines-macro-usage,-clang-analyzer-*,-readability-function-cognitive-complexity,-readability-magic-numbers -- -Iinclude -Isrc -Itests/sightread -I$HOME/boost_1_86_0 -std=c++20
