Add a dedicated type for a union of intervals
This is a prelude to fixing tap note detection. We can probably use this
class more widely, but it's a start. And now the lookup logic is in one
place, we can replace the obvious O(N) algorithm with the obvious
O(log N) algorithm.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,7 @@ if(SIGHTREAD_BUILD_TESTS)
         tests/sightread/tempomap_unittest.cpp
         tests/sightread/time_unittest.cpp
         tests/sightread/detail/chart_unittest.cpp
+        tests/sightread/detail/intervalset_unittest.cpp
         tests/sightread/detail/midi_unittest.cpp
         tests/sightread/detail/midiconverter_unittest.cpp
         src/sightread/chartparser.cpp
