--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.cache/
 .vs/
 .vscode/
 build/
@@ -5,5 +6,6 @@ out/
 vcpkg_installed/
 CMakePresets.json
 CMakeUserPresets.json
+compile_commands.json
 vcpkg.json
 vcpkg-configuration.json
